--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -13,6 +13,7 @@
     <div class="code_high">
       <address><span class="dis_price bestdeals">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
       <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -65,6 +66,7 @@
         
         <li><a href="product_link">- SEE MORE</a></li>
       <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -98,6 +100,7 @@
           </ul>
         </li>
       <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -114,15 +117,281 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="32" data-price="74.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IPFDC3"><img src="https://images-na.ssl-images-amazon.com/images/I/61bwTIJQWXL._SX522_.jpg" alt="JBL Flip 4 Bluetooth Portable Stereo Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IPFDC3">JBL Flip 4 Bluetooth Portable Stereo Speaker - black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$74.95</span><span class="ori_price">$110.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IPFDC3">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="699.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FewSAu"><img src="https://images-na.ssl-images-amazon.com/images/I/61IFJ6mViCL._SX522_.jpg" alt="Microsoft Surface Pro 6" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FewSAu">Microsoft Surface Pro 6 (Intel Core i5, 8GB RAM, 128GB) - Newest Version, Platinum</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$699.00</span><span class="ori_price">$899.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2FewSAu">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="259.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rl9AxV"><img src="https://images-na.ssl-images-amazon.com/images/I/61UFN2ttPVL._SX522_.jpg" alt="Lenovo Chromebook C330 2-in-1 Convertible Laptop" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rl9AxV">Lenovo Chromebook C330 2-in-1 Convertible Laptop, 11.6-Inch HD (1366 x 768) IPS Display, MediaTek MT8173C Processor, 4GB LPDDR3, 64 GB eMMC, Chrome OS</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$259.99</span><span class="ori_price">$299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Rl9AxV">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="199.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IJJuAE"><img src="https://images-na.ssl-images-amazon.com/images/I/61%2BdtvrPhKL._SX522_.jpg" alt="Vector Robot by Anki" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>199.99% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IJJuAE">Vector Robot by Anki, A Home Robot Who Hangs Out & Helps Out, With Amazon Alexa Built-In</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$199.99</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IJJuAE">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XiwLOM"><img src="https://images-na.ssl-images-amazon.com/images/I/81DJMwMcd5L._SX522_.jpg" alt="HP 23.8-inch FHD IPS Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XiwLOM">HP 23.8-inch FHD IPS Monitor with Tilt/Height Adjustment and Built-in Speakers (VH240a, Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XiwLOM">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="999.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ImDTRJ"><img src="https://images-na.ssl-images-amazon.com/images/I/61rjV21bzfL._SX522_.jpg" alt="Acer Predator Helios 300 Gaming Laptop PC" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ImDTRJ">Acer Predator Helios 300 Gaming Laptop PC, 15.6" FHD IPS w/ 144Hz Refresh, Intel i7-8750H, GTX 1060 6GB, 16GB DDR4, 256GB NVMe SSD, Aeroblade Metal Fans...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$999.99</span><span class="ori_price">$1,299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ImDTRJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="11" data-price="799.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Hx1pZ"><img src="https://images-na.ssl-images-amazon.com/images/I/71DvG2FjM%2BL._SX522_.jpg" alt="CyberpowerPC Gamer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>11% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Hx1pZ">CyberpowerPC Gamer Xtreme VR GXiVR8060A7 Gaming PC (Intel i5-9400F 2.9GHz 8GB DDR4, NVIDIA GeForce GTX 1660 6GB, 120GB SSD, 1TB HDD, 802.11AC WiFi & Win 10 Home)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$799.00</span><span class="ori_price">$899.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31Hx1pZ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="50.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31DlpnL"><img src="https://images-na.ssl-images-amazon.com/images/I/61fn5JwZYpL._SX522_.jpg" alt="Instant Pot" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31DlpnL">Instant Pot Duo Mini 3 Qt 7-in-1 Multi- Use Programmable Pressure Cooker, Slow Cooker, Rice Cooker, Steamer, Sauté, Yogurt Maker and Warmer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$50.99</span><span class="ori_price">$79.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31DlpnL">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="24.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KX3Xo8"><img src="https://images-na.ssl-images-amazon.com/images/I/71vbQ0hLE1L._SX679_.jpg" alt="Waterproof Mattress Protector" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KX3Xo8">SafeRest Twin Size Premium Hypoallergenic Waterproof Mattress Protector - Vinyl Free</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.95</span><span class="ori_price">$34.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KX3Xo8">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="49.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ImPqR7"><img src="https://images-na.ssl-images-amazon.com/images/I/815qi0FmN7L._SX522_.jpg" alt="High-Speed Blender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ImPqR7">NutriBullet NBR-1201 12-Piece High-Speed Blender/Mixer System, Gray (600 Watts)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.88</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ImPqR7">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="399.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ImES4n"><img src="https://images-na.ssl-images-amazon.com/images/I/51Qtg4L%2BJmL._SX522_.jpg" alt="Xiaomi Mi Electric Scooter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ImES4n">Xiaomi Mi Electric Scooter, 18.6 Miles Long-range Battery, Up to 15.5 MPH, Easy Fold-n-Carry Design, Ultra-Lightweight Adult Electric Scooter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$399.00</span><span class="ori_price">$495.87</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ImES4n">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="42" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ImFwPl"><img src="https://images-na.ssl-images-amazon.com/images/I/91SYwnwGUBL._SX679_.jpg" alt="JanSport Superbreak Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ImFwPl">JanSport Superbreak Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.99</span><span class="ori_price">$36.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ImFwPl">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XjIaxJ"><img src="https://images-na.ssl-images-amazon.com/images/I/71ebfGFzo1L._SX522_.jpg" alt="Sport-Brella Vented SPF 50+ Sun..." /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XjIaxJ">Sport-Brella Vented SPF 50+ Sun and Rain Canopy Umbrella for Beach and Sports Events (8-Foot)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XjIaxJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZydwhI"><img src="https://images-na.ssl-images-amazon.com/images/I/61hUdBC8xpL._SX522_.jpg" alt="Sport-Brella Versa-Brella SPF 50+ Adjustable Umbrella" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZydwhI">Sport-Brella Versa-Brella SPF 50+ Adjustable Umbrella with Universal Clamp</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.99</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ZydwhI">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="229.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZydeY1"><img src="https://images-na.ssl-images-amazon.com/images/I/7181ZEhsVwL._SX522_.jpg" alt="Coleman Cabin Tent" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZydeY1">Coleman Cabin Tent with Instant Setup | Cabin Tent for Camping Sets Up in 60 Seconds</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$229.99</span><span class="ori_price">$399.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ZydeY1">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="46" data-price="discounted_price">
 
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Kneqdm"><img src="https://images-na.ssl-images-amazon.com/images/I/51PCNITGywL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
-    <div class="rating">
-      <img src="<%= asset_path 'star-4_5.jpg' %>">
-      <p>Review_Num Amazon Reviews</p>
-    </div>
+
   </div>
 
   <div class="inner">
@@ -142,7 +411,6 @@
         </li>
       </ul>
       <em>*Pricing may change and deals can expire fast.</em>
-      <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div>
 
