--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -117,11 +117,12 @@
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box{text-align:center;}
-  .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;margin-bottom:70px;}
+  .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;}
   .codes .card_wrap .card .image_box .rating{}
-  .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;;}
+  .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;margin-bottom:0;}
   .codes .card_wrap .card .image_box .rating p{margin-bottom:70px;}
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
+  .codes .card_wrap .card .inner_top{margin-top:50px;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
@@ -169,6 +170,7 @@
 @media screen and (min-width:641px) and (max-width:1199px){
   .codes .lt_cnt .toggle>ul>.last7days{display:block;}
   .codes .lt_cnt .last7days_pc{display:none;}
+  .codes .card_wrap .card{height:300px;}
   .codes .card_wrap .card .inner>p>a{font-size:15px;font-weight:300;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a,
   .codes .lt_cnt .bestdeals>ul>li>a{text-decoration:none;color:#000;display:block;background:#fff;}
