--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -107,6 +107,265 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="29" data-price="199.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IS4167"><img src="https://images-na.ssl-images-amazon.com/images/I/515RyTxSGkL._SX522_.jpg" alt="Apple Watch Series 3" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-5.jpg' %>">
+      <p>1,618 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IS4167">Apple Watch Series 3 (GPS, 38mm) - Silver Aluminium Case with White Sport Band</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$199.00</span><span class="ori_price">$279.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IS4167">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XpnunO"><img src="https://images-na.ssl-images-amazon.com/images/I/71JyVCqUGRL._SY679_.jpg" alt="True Wireless Earbuds" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4.jpg' %>">
+      <p>400 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XpnunO">True Wireless Earbuds, Soundcore Liberty Neo by Anker, Bluetooth Headphones with Graphene-Enhanced Drivers, 12-Hour Playtime, IPX5 Water-Resistant,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$59.99</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XpnunO">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="214.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WMFPah"><img src="https://images-na.ssl-images-amazon.com/images/I/413zfEUJQAL.jpg" alt="Dell LED Monitor" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>1,065 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WMFPah">Dell U2415 24-Inch 1920 x 1200 LED Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$214.95</span><span class="ori_price">$399.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WMFPah">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KpHqBc"><img src="https://images-na.ssl-images-amazon.com/images/I/81DJMwMcd5L._SX522_.jpg" alt="HP 23.8-inch FHD IPS Monitor" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>1,334 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KpHqBc">HP 23.8-inch FHD IPS Monitor with Tilt/Height Adjustment and Built-in Speakers (VH240a, Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KpHqBc">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="150.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KqO3TA"><img src="https://images-na.ssl-images-amazon.com/images/I/51jAJai8bBL._SX522_.jpg" alt="NETGEAR Nighthawk AC1900 Dual Band WiFi Router" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4.jpg' %>">
+      <p>26,029 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KqO3TA">NETGEAR Nighthawk AC1900 Dual Band WiFi Router, Smart Parental Controls, Compatible with Amazon Alexa (R7000)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$150.97</span><span class="ori_price">$189.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KqO3TA">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="31.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J4JcVl"><img src="https://images-na.ssl-images-amazon.com/images/I/712mEFqmY%2BL._UX522_.jpg" alt="Vintage Tea Dress" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>9,534 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J4JcVl">GRACE KARIN Boatneck Sleeveless Vintage Tea Dress with Belt</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$31.99</span><span class="ori_price">$45.37</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J4JcVl">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="14" data-price="29.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xm9StB"><img src="https://images-na.ssl-images-amazon.com/images/I/71awzZVceWL._SX522_.jpg" alt="Apple Cider Vinegar Shampoo" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4.jpg' %>">
+      <p>3,905 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>14% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xm9StB">WOW Apple Cider Vinegar Shampoo & Hair Conditioner Set - (2 x 16.9 Fl Oz / 500mL) - Increase Gloss, Hydration, Shine - Reduce Itchy Scalp, Dandruff & Frizz...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.94</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Xm9StB">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="11.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31FCqxF"><img src="https://images-na.ssl-images-amazon.com/images/I/717CuA23EoL._SX522_.jpg" alt="Hot Cream Cellulite Treatment" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4.jpg' %>">
+      <p>1,398 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31FCqxF">Hot Cream Cellulite Treatment – Belly Fat Burner for Women and Men – Natural Anti Aging Cream with Antioxidants and Essential Oils Rosemary...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.95</span><span class="ori_price">$30.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31FCqxF">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XjniGJ"><img src="https://images-na.ssl-images-amazon.com/images/I/710vhwV82zL._SX522_.jpg" alt="Ceramic Flat Iron" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>1,205 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XjniGJ">Remington S9500PP Pearl Pro Ceramic Flat Iron, 1-inch, Black </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$26.99</span><span class="ori_price">$33.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XjniGJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="17.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KoY9Ex"><img src="https://images-na.ssl-images-amazon.com/images/I/81wmOCTcTwL._SX425_.jpg" alt="Damage Protection Hair Dryer" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>2,266 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KoY9Ex">Remington D3190 Damage Protection Hair Dryer with Ceramic + Ionic + Tourmaline Technology, Purple</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.47</span><span class="ori_price">$20.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KoY9Ex">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="12.76">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WOsCO9"><img src="https://images-na.ssl-images-amazon.com/images/I/61%2BN2PWxc1L._SX679_.jpg" alt="Cell Phone Holder for Car" /></a>
+    <div class="rating">
+      <img src="<%= asset_path 'star-4_5.jpg' %>">
+      <p>3,875 Amazon Reviews</p>
+    </div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WOsCO9">Cell Phone Holder for Car, Car Phone Mount Holder Dashboard Car Pad Mat for iPhone Xs XS Max X 8 8 Plus 7 SE 6s 6 Plus 5s 5 4s Samsung Galaxy ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.76</span><span class="ori_price">$16.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WOsCO9">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="40" data-price="discounted_price">
   <div class="image_box">
