--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -1,3 +1,12 @@
+<!-- <div class="deals_nav clearfix">
+  <div class="wrap">
+    <ul>
+      <li><a class="active" href="/deals/promo_codes">Deals of Amazon</a></li>
+      <li><a href="/deals/shoes">Deals of Shoes</a></li>
+    </ul>
+  </div>
+</div> -->
+
 <div class="sub_nav">
   <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
