--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -154,81 +154,13 @@
           </div>
         </div>
 
-        <!-- <div class="flex slides clearfix">
-          <div class="numbering">2 / 6</div>
-          <div class="img_box">
-           <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg">
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out on <span>Amazon</span></a>
-          </div>
-        </div>
 
-        <div class="flex slides clearfix">
-          <div class="numbering">3 / 6</div>
-          <div class="img_box">
-           <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out on <span>Amazon</span></a>
-          </div>
-        </div>
-        
-        <div class="flex slides clearfix">
-          <div class="numbering">4 / 6</div>
-          <div class="img_box">
-           <img src="https://images-na.ssl-images-amazon.com/images/I/810ngHHl63L._SX522_.jpg">
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out on <span>Amazon</span></a>
-          </div>
-        </div>
-
-        <div class="flex slides clearfix">
-          <div class="numbering">5 / 6</div>
-          <div class="img_box">
-           <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out on <span>Amazon</span></a>
-          </div>
-        </div>
-
-        <div class="flex slides clearfix">
-          <div class="numbering">6 / 6</div>
-          <div class="img_box">
-           <img src="https://www.uncommongoods.com/images/items/23900/23960_1_640px.jpg">
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <span>Check it Out on <a href="#n"> Amazon</a></span>
-          </div>
-        </div> -->
 
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
         <a class="next" onclick="changeSlide(1)">&#10095;</a>
 
       </div><!--./modal-content-->
-      </div><!--./wrap->
+      </div><!--./wrap-->
     </div><!--./modal-->
   </div><!--./guide_show-->
  </div><!--./wrap-->
