--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -166,12 +166,32 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 /* For header_short */
 
+
+.deals_nav{margin-top:255px;display:block;font-family: 'Anton', sans-serif;}
+.deals_nav ul{}
+.deals_nav ul>li{float:left;width:250px;text-align:center;}
+.deals_nav ul>li>a{text-decoration:none;color:#000;font-size:25px;display:block;padding:5px 15px;}
+.deals_nav ul>li>.active{background:#000;color:#fff;}
+@media screen and (max-width:640px){
+  .deals_nav{margin-top:70px;}
+  .deals_nav ul>li{width:50%;}
+  .deals_nav ul>li>a{font-size:17px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .deals_nav{margin-top:180px;}
+  .deals_nav ul>li{width:165px;}
+  .deals_nav ul>li>a{font-size:20px;}
+}
+
 /* Deals&Gadgets sub menu */
-.sub_nav{margin-top:300px;}
+.sub_nav{margin-top:300px;font-family: 'Anton', sans-serif;}
 .sub_nav .sub_nav_pc{}
 .sub_nav .sub_nav_pc>ul{}
 .sub_nav .sub_nav_pc>ul>li{float:left;width:150px;text-align:center;}
-.sub_nav .sub_nav_pc>ul>li>a{text-decoration:none;color:#000;font-size:15px;display:block;font-weight:400;}
+.sub_nav .shoes_nav_pc{margin:0 1%;}
+.sub_nav .shoes_nav_pc>ul{background:#000;padding:5px 0;}
+.sub_nav .shoes_nav_pc>ul>li{width:auto;margin:0 2%;}
+.sub_nav .sub_nav_pc>ul>li>a{text-decoration:none;color:#000;font-size:20px;display:block;font-weight:400;}
 .sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border-bottom:2px solid #000;}
 .sub_nav .gnb_open,
 .sub_nav .gnb_open_b,
@@ -180,6 +200,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 @media screen and (max-width:640px){
   .sub_nav{margin-top:60px;}
+  .shoes_nav{margin-top:20px;}
   .sub_nav .sub_nav_pc{display:none;}
   .sub_nav .gnb_m{display:block;background:#000;position:fixed;right:-800px;top:0;width:100%;z-index:303;}
   .sub_nav .gnb_m>ul{margin:10px 0 0 5%;}
@@ -198,8 +219,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .sub_nav{margin-top:180px;}
+  .shoes_nav{margin-top:0px;}
   .sub_nav .sub_nav_pc{display:none;}
-
   .sub_nav .gnb_m{display:block;background:#000;position:fixed;right:-800px;top:0;width:60%;z-index:303;}
   .sub_nav .gnb_m>ul{margin:10px 0 0 5%;}
   .sub_nav .gnb_m>ul>li{border-right:none;float:none;}
