--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -222,20 +222,25 @@
 .guide_header{margin:120px 0 50px 0;font-family:'Montserrat', sans-serif;}
 .guide_header h2{font-size:50px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
 .guide_show{font-family: 'Montserrat', sans-serif;}
+.shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
 .guide_show .column{float:left;width:23%;margin:1%;transition:0.3s;}
+.guide_show .shoes_column{float:left;width:18%;margin:1%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
 .guide_show .column img{width:100%;height:260px;object-fit:cover;box-shadow:0 4px 11px 0 rgba(221,221,221,.5)}
-.guide_show .modal{overflow:scroll;background-color: white;position: fixed;left: 0;top: -500%; height: 100%;width: 100%;transition: top 0.6s ease-in-out;}
+.guide_show .shoes_column img{object-fit:contain;padding:10px;}
+.guide_show .modal{overflow:scroll;background-color:white;position:fixed;left:0;top:-500%;height:100%;width:100%;transition:top 0.6s ease-in-out;z-index:500;}
 .guide_show .show{top:0;}
 .guide_show .modal-content{height: 100%; width: 90%;margin: 120px auto 0 auto;padding: 0;position:relative;}
-.guide_show .close {color:black;font-size:60px;font-weight:bold;position:absolute;top:0;right:10px;z-index:2;}
+.guide_show .close{color:black;font-size:60px;font-weight:bold;position:absolute;top:0;right:10px;z-index:2;}
+.guide_show .shoes_close{top:-50px;}
 .guide_show .close:hover,
 .guide_show .close:focus {color: #999;cursor: pointer;text-decoration: none;}
 .guide_show .slides {height:100%;width:100%;position:absolute;left:0;right:0;z-index: 1;}
 .guide_show .slides .inner_wrap{margin-top:270px;}
+.guide_show .slides .shoes_wrap{margin-top:200px;}
 .guide_show .slides .inner_wrap .img_box{float:left;width:45%;height:300px;margin:-150px 3% 0 2%}
 .guide_show .slides .inner_wrap .img_box img{width:100%;height:100%;object-fit:contain;}
 .guide_show .slides .inner_wrap .inner{float:left;width:46%;margin-top:-150px;}
@@ -243,8 +248,13 @@
 .guide_show .slides .inner_wrap .inner strong{font-size:14px;color:#ccc;font-weight:100;}
 .guide_show .slides .inner_wrap .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
 .guide_show .slides .inner_wrap .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
+.guide_show .slides .inner_wrap .inner .price{margin-bottom:30px;}
+.guide_show .slides .inner_wrap .inner .color{margin-bottom:0;font-weight:400;font-size:15px;color:#616161;}
+.guide_show .slides .inner_wrap .inner .size{font-weight:400;font-size:15px;color:#616161;}
 .guide_show .slides .inner_wrap .inner a {text-decoration:none;background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
 .guide_show .slides .inner_wrap .inner a span{color:#08f;margin-left:5px;}
+.guide_show .slides .inner_wrap .inner .notes{margin-top:20px;}
+.guide_show .slides .inner_wrap .inner .notes h5{font-weight:400;color:#616161;}
 .guide_show .hide {opacity: 0; z-index: -1;}
 .guide_show .pop {opacity: 1; z-index: 1;}
 .guide_show .cursor {cursor: pointer}
@@ -253,19 +263,23 @@
 .guide_show .next{right:0;}
 .guide_show .prev:hover,
 .guide_show .next:hover {background-color: rgba(0,0,0,0.9);}
-.guide_show .numbering {color: black;font-size: 18px;padding: 8px 12px;position: absolute;top: 0; width: 100%; text-align: center;}
+.guide_show .numbering{color: black;font-size: 18px;padding: 8px 12px;position: absolute;top: 0; width: 100%; text-align: center;}
+.guide_show .shoes_numbering{top:-80px;}
 
 @media screen and (max-width:640px){
   .guide_header{margin:80px 0 20px 0;}
   .guide_header h2{font-size:25px;width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
-  .guide_show .column{width:48%;box-shadow:-1px 6px 8px rgba(0, 0, 0, 0.1)}
+  .guide_show .column{width:48%;}
   .guide_show .column:hover{box-shadow: 0 0 0;}
-  .guide_show .column img{width:100%;height:150px;object-fit:cover;border-radius:10px;}
+  .guide_show .column img{width:100%;height:175px;object-fit:cover;border-radius:10px;}
+  .guide_show .shoes_column img{object-fit:contain;}
   .guide_show .close{right:-20px;}
   .guide_show .modal-content{margin:50px auto 0 auto;}
+  .guide_show .slides .shoes_wrap{margin-top:315px;}
   .guide_show .slides .inner_wrap .img_box{float:none;width:100%;height:auto;margin:0;margin-top:-200px;}
   .guide_show .slides .inner_wrap .inner{float:none;width:100%;margin-top:20px;}
+  .guide_show .slides .inner_wrap .shoes_inner{margin-top:50px;}
   .guide_show .slides .inner_wrap .inner em{margin-top:10px;}
   .guide_show .slides .inner_wrap .inner p{margin-bottom:30px;}
   .guide_show .slides .inner_wrap .inner a {text-decoration:none;background:#000;color:#fff;padding:10px 25px;margin-top:30px;font-weight:bold;}
@@ -277,6 +291,8 @@
  .guide_show .column{float:left;width:31%;}
  .guide_show .column:hover{box-shadow:0,0,0;}
  .guide_show .column img{height:250px;}
+ .guide_show .shoes_column{width:23%;}
+ .guide_show .shoes_column img{height:200px;}
  .guide_show .close{right:-40px;}
  .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
 }
