--- a/app/views/deals/_header_shoes.html.erb
+++ b/app/views/deals/_header_shoes.html.erb
@@ -1,20 +1,17 @@
 <div class="deals_nav clearfix">
-  <div class="wrap">
-    <ul>
-      <li><a href="/deals/promo_codes">Deals of Amazon</a></li>
-      <li><a class="active" href="/deals/shoes">Deals of Shoes</a></li>
-    </ul>
-  </div>
+  <ul>
+    <li><a href="/deals/promo_codes">Deals of Amazon</a></li>
+    <li><a class="active" href="/deals/sneakers01M">Deals of Sneakers</a></li>
+  </ul>
 </div>
 
 <div class="sub_nav shoes_nav">
   <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
-  <div class="wrap">
     <div class="sub_nav_pc shoes_nav_pc">
       <ul class="clearfix">
         <li><a href="/deals/promo_codes">Nike</a></li>
-        <li><a href="/deals/bestdeals">Addidas</a></li>
+        <li><a href="/deals/sneakers_02">Sneakers_02</a></li>
         <li><a href="/deals/quick_search">New Blance</a></li>
       </ul>
     </div>
@@ -28,6 +25,4 @@
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
     <div class="gnb_kbg"></div>
-    
-  </div>
 </div>
