--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -41,7 +41,7 @@
   .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
-  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;height:260px;}
+  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;height:270px;}
   .codes .card_wrap .dealofday{height:auto;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
@@ -309,11 +309,60 @@
   /*.promotions .rt_cnt .box_wrap .box img{width:100%;-webkit-filter: grayscale(100%);filter:none;}*/
 }
 
-/*@media screen and (max-width:640px){
-  .fathers_day img{width:100%;}
+/* For Shoes Section */
+.men_women{font-family:'Anton', sans-serif;font-weight:400;}
+.men_women ul{margin:5px 1%;text-align:center;}
+.men_women ul li{float:left;width:70px;}
+.men_women ul li a{text-decoration:none;color:#000;}
+
+.tabs {
+  padding: 0 1em;
+  margin: 0;
 }
-@media screen and (min-width:641px) and (max-width:1199px){
-  .fathers_day img{width:100%;} 
-}*/
+.tabs nav {
+  position: relative;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.tabs nav ul {
+  display: inline-block;
+  width: 100%;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.tabs nav li {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  padding: 1rem 2rem 0.8rem;
+  margin-right: 0.5em;
+  font-family: "Raleway";
+  font-size: 130%;
+  color: gray;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: white;
+  border-bottom: 0.2rem solid silver;
+  transition: all 200ms;
+}
+.tabs nav li:not(.current):hover {
+  color: #62dfc3;
+  border-bottom: 0.2rem solid #62dfc3;
+}
+.tabs nav li.current {
+  color: white;
+  cursor: default;
+  background-color: #62dfc3;
+  border-bottom: 0.2rem solid #62dfc3;
+}
+.shoes_content section {
+  display: none;
+  text-align: justify;
+}
+.shoes_content section.current {
+  display: block;
+}
+
 
 
