--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -1,16 +1,13 @@
 <!-- <div class="deals_nav clearfix">
-  <div class="wrap">
-    <ul>
-      <li><a class="active" href="/deals/promo_codes">Deals of Amazon</a></li>
-      <li><a href="/deals/shoes">Deals of Shoes</a></li>
-    </ul>
-  </div>
+  <ul>
+    <li><a class="active" href="/deals/promo_codes">Deals of Amazon</a></li>
+    <li><a href="/deals/shoes">Deals of Sneakers</a></li>
+  </ul>
 </div> -->
 
 <div class="sub_nav">
   <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
-  <div class="wrap">
     <div class="sub_nav_pc">
       <ul class="clearfix">
           <li><a href="/deals/promo_codes">Promo Codes</a></li>
@@ -34,6 +31,4 @@
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
     <div class="gnb_kbg"></div>
-    
-  </div>
 </div>
