--- a/app/views/deals/sneakers01M.html.erb
+++ b/app/views/deals/sneakers01M.html.erb
@@ -1,13 +1,20 @@
 <div class="layout"><!--layout-->
+  <div class="wrap">
     
   <%= render 'shared/header' %>
-  <%= render 'deals/header_shoes' %>    
-  
+  <%= render 'deals/header_shoes' %>  
+
+  <div class="men_women">
+    <ul>
+      <li><a href="/deals/sneakers01M">Men</a></li>
+      <li><a href="/deals/sneakers01W">Women</a></li>
+    </ul>
+  </div>   
+
   <div class="shoes">
-    <div class="wrap">
 
      <div class="guide_show shoes_wrap clearfix">
-   
+
       <div class="flex guide_show_wrap" id="gallery">
         <!-- <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
           <img src="Image_URL">
@@ -30,11 +37,12 @@
         <div class="flex column shoes_column" onclick="currentSlide(6)">
           <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M237062_1.jpg">
         </div>
+
       </div><!--./show_wrap-->
 
         <div id="myModal" class="modal">
           <div class="wrap">
-          <div class="modal-content">
+           <div class="modal-content">
             <span class="close shoes_close">&times;</span> <!--close button--> 
 
             <!-- <div class="flex slides clearfix">
@@ -67,6 +75,7 @@
                   <strong>BY AMAZON</strong>
                   <em>$100.00</em>
                   <p class="price">$70.00 (30% OFF)</p>
+                  <address>Lower price available on select options</address>
                   <p class="color">Available Colors: Tan</p>
                   <p class="size">Available Sizes: 7M , 7.5M , 8M , 8.5M , 9M , 9.5M , 10M , 10.5M , 11M , 11.5M , 12M , 13M , 14M</p>
                   <a href="#n">Check it Out on <span>Amazon</span></a>
@@ -175,20 +184,18 @@
               </div>
             </div>
 
-
-
             <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
             <a class="next" onclick="changeSlide(1)">&#10095;</a>
 
-          </div><!--./modal-content-->
+           </div><!--./modal-content-->
           </div><!--./wrap-->
         </div><!--./modal-->
       </div><!--./guide_show-->
-    
 
-    </div><!--./warp-->
-  </div><!--./shoes-->
+    </div><!--./shoes-->
+ 
   <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+  </div><!--./warp-->
 </div><!--./layout-->
 <script>
  <%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %>
