--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -136,10 +136,10 @@
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red:hover>.tooltip-content{visibility: visible;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:400px;background:#87c442;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange{margin-left:10px;position:relative;display:inline;background:#e47911;color:#fff;padding:0 10px;border-radius:10px;}
