--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -6,7 +6,7 @@
   <div class="codes common_layout">
     
       <div class="lt_cnt">
-        <h2>Amazon Best Deals</h2>
+        <h2>Best Deals of Amazon</h2>
         
        <div class="toggle">
           <ul>
@@ -54,7 +54,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>The Best Deals We've Picked On Amazon Jun. 19. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
+        <h2>The Best Deals We've Picked On Amazon Jun. 20. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
         
         <div class="sort_box clearfix">
           <ul>
@@ -76,7 +76,7 @@
           
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_07">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_01">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
